Fixed where It wasnt going to the right path.
Former-commit-id: 519753f6e35bce94e041a2ef1d25470aca6b3d71

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -73,7 +73,9 @@
   "Clear console": "مسح المحطة",
   "Click to copy to clipboard": "إضغط لنسخ إلى الحافظة",
   "Close": "إغلاق",
+  "Close and go to Github": null,
   "Close and install": "إغلاق و تثبيت",
+  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": "إغلاق المحفظة وتثبيت التحديث الآن؟",
   "Closing Nexus Wallet": "يتم إغلاق المحفظة",
   "Color scheme": "نظام الألوان",
