--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -73,7 +73,9 @@
   "Clear console": "Konsole löschen",
   "Click to copy to clipboard": "Zum Kopieren in die Zwischenablage klicken",
   "Close": "Schließen",
+  "Close and go to Github": null,
   "Close and install": "Schließen und installieren",
+  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": "Wallet schließen und Update jetzt installieren?",
   "Closing Nexus Wallet": "Nexus schließen",
   "Color scheme": "Farbschema",
