--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -73,7 +73,9 @@
   "Clear console": "Clear console",
   "Click to copy to clipboard": "Click to copy to clipboard",
   "Close": "Close",
+  "Close and go to Github": "Close and go to Github",
   "Close and install": "Close and install",
+  "Close the wallet and go to GitHub?": "Close the wallet and go to GitHub?",
   "Close the wallet and install update now?": "Close the wallet and install update now?",
   "Closing Nexus Wallet": "Closing Nexus Wallet",
   "Color scheme": "Color scheme",
