--- a/assets/translations/fi.json
+++ b/assets/translations/fi.json
@@ -73,7 +73,9 @@
   "Clear console": "Tyhjennä konsoli",
   "Click to copy to clipboard": "Kopioi leikepöydälle",
   "Close": "Sulje",
+  "Close and go to Github": null,
   "Close and install": "Sulje ja asenna",
+  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": "Haluatko sulkea lompakon ja asentaa nyt?",
   "Closing Nexus Wallet": "Suljetaan Nexus Lompakko",
   "Color scheme": "Väriteema",
