--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -73,7 +73,9 @@
   "Clear console": "Effacer la console",
   "Click to copy to clipboard": "Cliquez pour copier dans le presse-papiers",
   "Close": "Fermeture",
+  "Close and go to Github": null,
   "Close and install": "Fermer et installer",
+  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": "Fermer le portefeuille et installer la mise à jour maintenant ?",
   "Closing Nexus Wallet": "Fermeture du portefeuille Nexus",
   "Color scheme": "Palette de couleurs",
