--- a/assets/translations/hu.json
+++ b/assets/translations/hu.json
@@ -73,7 +73,9 @@
   "Clear console": "Konzol törlése",
   "Click to copy to clipboard": "Kattints ide a vágólapra helyezéshez",
   "Close": "Bezár",
+  "Close and go to Github": null,
   "Close and install": "Zárja be és telepítse",
+  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": "A pénztárcából most kilépni és a frissítést telepíteni?",
   "Closing Nexus Wallet": "Kilépés a Nexus Pénztárcából",
   "Color scheme": "Színséma",
