--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -73,7 +73,9 @@
   "Clear console": "Wyczyśc konsole",
   "Click to copy to clipboard": "Kliknij, aby skopiować",
   "Close": "Zamknij",
+  "Close and go to Github": null,
   "Close and install": "Zamknij i zainstaluj",
+  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": "Zamknąć portfel i zainstalować aktualizację?",
   "Closing Nexus Wallet": "Zamykanie portfela Nexus",
   "Color scheme": "Schemat kolorów",
