--- a/assets/translations/pt.json
+++ b/assets/translations/pt.json
@@ -73,7 +73,9 @@
   "Clear console": "Apagar consola",
   "Click to copy to clipboard": null,
   "Close": "Fecho",
+  "Close and go to Github": null,
   "Close and install": null,
+  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": null,
   "Closing Nexus Wallet": "Fechando a carteira da Nexus",
   "Color scheme": "Esquema de cores",
