--- a/assets/translations/zh-cn.json
+++ b/assets/translations/zh-cn.json
@@ -73,7 +73,9 @@
   "Clear console": "清空控制台",
   "Click to copy to clipboard": "点击复制到剪贴板",
   "Close": "关闭",
+  "Close and go to Github": null,
   "Close and install": "关闭并安装",
+  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": "立即关闭钱包并安装更新？",
   "Closing Nexus Wallet": "关闭Nexus钱包",
   "Color scheme": "配色方案",
