--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -73,7 +73,9 @@
   "Clear console": "Borrar consola",
   "Click to copy to clipboard": null,
   "Close": "Cerrar",
+  "Close and go to Github": null,
   "Close and install": null,
+  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": null,
   "Closing Nexus Wallet": "Cierre cartera Nexus",
   "Color scheme": "Esquema de color",
