--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -73,7 +73,9 @@
   "Clear console": "クリアコンソール",
   "Click to copy to clipboard": null,
   "Close": "閉じる",
+  "Close and go to Github": null,
   "Close and install": null,
+  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": null,
   "Closing Nexus Wallet": null,
   "Color scheme": null,
