--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -73,7 +73,9 @@
   "Clear console": "Console leegmaken",
   "Click to copy to clipboard": null,
   "Close": "Gesloten",
+  "Close and go to Github": null,
   "Close and install": null,
+  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": null,
   "Closing Nexus Wallet": "Sluiten van Nexus",
   "Color scheme": null,
