--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -73,7 +73,9 @@
   "Clear console": "Очистить консоль",
   "Click to copy to clipboard": null,
   "Close": "Закрыть",
+  "Close and go to Github": null,
   "Close and install": null,
+  "Close the wallet and go to GitHub?": null,
   "Close the wallet and install update now?": null,
   "Closing Nexus Wallet": null,
   "Color scheme": null,
