Update from crowdin
Former-commit-id: 49dccec36bd3bfeb94074a9a583d861e6a1375e9

--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -35,7 +35,7 @@
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "La mise à jour automatique n'est pas encore disponible pour Mac, veuillez mettre à jour le portefeuille manuellement pour le moment",
   "Auto update (Recommended)": "Mise à jour automatique (recommandé)",
   "Automatically check for new versions and notify if a new version is available.": "Vérifier automatiquement l'existence de nouvelles versions et me notifier si une nouvelle version est disponible.",
-  "Avatar Mode": null,
+  "Avatar Mode": "Mode Avatar",
   "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
   "Background": "Arrière-plan",
   "Background Color": "Couleur d'arrière plan",
@@ -48,7 +48,7 @@
   "Base currency": null,
   "Block Count": "Nombre de blocs",
   "Block Weight": "Block Weight",
-  "Block hash": null,
+  "Block hash": "Hash du bloc",
   "Bootstrap Recent Database": "Amorcer la base de données récente",
   "Bootstrap process has been aborted": "Le processus d'amorçage a été abandonné",
   "Browse": "Parcourir",
@@ -59,7 +59,7 @@
   "Cannot find module": "Module introuvable",
   "Cannot install from that location": "Impossible d'installer depuis cet emplacement",
   "Cannot move to the same account": "Impossible de transférer vers le même compte",
-  "Category": null,
+  "Category": "Catégorie",
   "Change password": "Changer le mot de passe",
   "Check for Updates...": "Vérifier les mises à jour...",
   "Check wallet": "Vérifier le portefeuille",
@@ -80,7 +80,7 @@
   "Closing Nexus Wallet": "Fermeture du portefeuille Nexus",
   "Color scheme": "Palette de couleurs",
   "Color scheme has been reset to default": "La palette de couleur a été réinitialisée à sa valeur par défaut",
-  "Confirm": null,
+  "Confirm": "Confirmer",
   "Confirm password": "Confirmez le mot de passe",
   "Confirmations": "Confirmations",
   "Connecting to Nexus Core": "Connexion au noyau Nexus",
@@ -95,7 +95,7 @@
   "Copy to clipboard": "Copier dans le presse-papier",
   "Core": "Noyau",
   "Core is in Manual Mode": "Le noyau est en mode manuel",
-  "Core needs to restart for these settings to take effect!": null,
+  "Core needs to restart for these settings to take effect!": "Le noyau doit être redémarré pour que ces paramètres prennent effet!",
   "Core output": "Sortie de noyau",
   "Core restarting": "Redémarrage du noyau",
   "Core settings saved": "Paramètres de base enregistrés",
@@ -125,13 +125,13 @@
   "Developer mode": "Mode développeur",
   "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "Le mode développeur permet des fonctionnalités avancées afin d’aider au développement. Après activation, le portefeuille doit être fermé et rouvert pour activer ces fonctionnalités.",
   "Disable %{moduleName}?": "Désactiver %{moduleName}?",
-  "Disabling Avatar will make the core use a separate change key": null,
+  "Disabling Avatar will make the core use a separate change key": "Désactiver Avatar fera que le noyau utilise une clé de changement séparée",
   "Dismiss": "Ignorer",
   "Display Test Transactions on the Transactions page": "Afficher les transactions de test sur la page des transactions",
   "Display name": "Nom d'affichage",
   "Download Recent Database": "Télécharger la base de données récente",
   "Download recent database?": "Télécharger la base de données récente ?",
-  "Download transactions history": null,
+  "Download transactions history": "Télécharger l'historique des transactions",
   "Downloading": "Téléchargement en cours",
   "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": "Le téléchargement d'une version récente de la base de données peut réduire le temps nécessaire pour synchroniser votre portefeuille",
   "Downloading the database": "Téléchargement de la base de données",
@@ -153,7 +153,7 @@
   "Enter console commands here (ex: getinfo, help)": "Entrez les commandes de la console ici (ex: getinfo, help)",
   "Enter manual Core mode?": "Entrer en mode daemon manuel?",
   "Enter your message": "Entrez votre message",
-  "Enter your wallet password": null,
+  "Enter your wallet password": "Entrez le mot de passe de votre portefeuille",
   "Error bootstrapping recent database": "Erreur lors de l'amorçage de la base de données récente",
   "Error changing password": "Erreur du changement de mot de passe",
   "Error copying module files": "Erreur lors de la copie des fichiers du module",
@@ -185,14 +185,14 @@
   "Hash Difficulty": "Difficulté Hash",
   "Help": "Aide",
   "High": "Haut",
-  "I understand the risk": null,
+  "I understand the risk": "Je comprends le risque",
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "UNE UTILISATION INAPPROPRIÉE DE CE LOGICIEL PEUT PROVOQUER LA PERTE IRRÉVERSIBLE DE VOS FONDS.",
   "IP address": "Adresse IP",
   "IP address configured for manual Core.": "Adresse IP configurée pour le daemon manuel.",
-  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
+  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP/Ports autorisés à miner. Séparez-les par <b>;</b> . Métacaractères supportés uniquement en IP",
   "Ignore": "Ignorer",
   "Immature": "Immature",
-  "Immature Balance": null,
+  "Immature Balance": "Solde immature",
   "Import": "Importer",
   "Import custom theme": "Importer thème personnalisé",
   "Import private key": "Importer une clé privée",
@@ -215,8 +215,8 @@
   "Language": "Langue",
   "Last updated\n%{time}": "Dernière mise à jour\n%{time}",
   "Light": "Clair",
-  "Loading transaction details...": null,
-  "Loading transactions": null,
+  "Loading transaction details...": "Chargement des détails de transaction...",
+  "Loading transactions": "Chargement des transactions",
   "Local Time": "Heure locale",
   "Log in now": "Se connecter maintenant",
   "Log out": "Se déconnecter",
@@ -241,7 +241,7 @@
   "Minimize the wallet when closing the window instead of closing it.": "Réduire le portefeuille au lieu de le fermer lorsque vous fermez la fenêtre.",
   "Minimum amount of confirmations before a block is accepted. Local only.": "Montant minimum de confirmation avant l'acceptation d'un bloc. Local uniquement.",
   "Minimum confirmations": "Confirmations minimales",
-  "Mining IP Whitelist": null,
+  "Mining IP Whitelist": "Liste blanche IP de minage",
   "Module Details": "Détails du module",
   "Module Specifications version": "Version de spécifications du module",
   "Module has been successfully installed": "Le module a été installée avec succès",
@@ -288,7 +288,7 @@
   "No, let it continue": "Non, le laisser continuer",
   "No, let it sync": "Non, le laisser synchroniser",
   "Not available": "Indisponible",
-  "Not enough disk space! Minimum 15GB of free space is required.": "Il n'y a pas assez d'espace disque ! Un minimum de 15Go d'espace libre est nécessaire.",
+  "Not enough disk space! Minimum 15GB of free space is required.": null,
   "Not logged in": "Portefeuille verrouillé",
   "Not provided": "Non spécifié",
   "Notes": "Remarques",
@@ -311,7 +311,7 @@
   "Past Week": "Semaine dernière",
   "Past Year": "Année passée",
   "Paste": "Coller",
-  "Pending": null,
+  "Pending": "En attente",
   "Phone Number": "Numéro de téléphone",
   "Phone number": "Numéro de téléphone",
   "Please wait for Nexus Core to start.": "Veuillez attendre que le noyau Nexus démarre.",
@@ -356,7 +356,7 @@
   "Restarting Core...": "Redémarrage du noyau...",
   "Restarting Nexus Core...": "Redémarrage du daemon...",
   "Sample Address": "Exemple d'adresse",
-  "Save Settings": null,
+  "Save Settings": "Sauvegarder les paramètres",
   "Save changes": "Sauvegarder changements",
   "Search address": "Rechercher une adresse",
   "Search contact": "Chercher un contact",
@@ -374,24 +374,24 @@
   "Send": "Envoyer",
   "Send NXS": "Envoyer NXS",
   "Send To multiple recipients": "Envoyer à plusieurs destinataires",
-  "Send all": null,
+  "Send all": "Tout envoyer",
   "Send anonymous usage data": "Envoyer des données d'usage anonymes",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "Envoyer des données d'utilisation anonymes pour permettre aux développeurs de Nexus d'améliorer le portefeuille.",
   "Send from": "Envoyer depuis",
   "Send to": "Envoyer vers",
   "Send transaction?": "Envoyer la transaction?",
   "Sent": "Envoyé",
-  "Set timeout for login": null,
+  "Set timeout for login": "Définir délai de connexion",
   "Settings": "Réglages",
-  "Settings Saving": null,
-  "Settings Unchanged": null,
-  "Show transactions chart": null,
+  "Settings Saving": "Sauvegarde des paramètres",
+  "Settings Unchanged": "Paramètres inchangés",
+  "Show transactions chart": "Afficher le graphique des transactions",
   "Source code": "Code source",
   "Stake": "Stake",
   "Stake Difficulty": "Difficulté Stake",
   "Stake Rate": "Stake Reward",
   "Stake Weight": "Stake Weight",
-  "Staking and mining rewards that need to get past 120 block-old to become available": null,
+  "Staking and mining rewards that need to get past 120 block-old to become available": "Les récompenses de staking et de minage devant dépasser 120 bloc-âge afin d'être disponibles",
   "Start Nexus Core": "Démarrer le noyau Nexus",
   "Stop Nexus Core": "Arrêter le noyau Nexus",
   "Stopping Core...": "Arrêt du noyau...",
@@ -418,7 +418,7 @@
   "This repository does not exist or is private": "Ce répertoire n'existe pas ou est privé",
   "This repository is not verified to be the real source code of this module": "Ce répertoire n'est pas vérifié comme étant le code source réel de ce module",
   "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": "Ce changement de paramètre ne prendra effet qu'après le redémarrage du Core. Voulez-vous redémarrer le Core maintenant ?",
-  "Time": null,
+  "Time": "Temps",
   "Time is required": "L'heure est requise",
   "Time must be at least one hour in the future": "L'heure doit être au moins une heure dans le futur",
   "Time span": "Date",
@@ -427,13 +427,13 @@
   "Toggle Developer Tools": "Afficher/cacher les outils de développement",
   "Toggle FullScreen": "Basculer en plein écran",
   "Toggle Module's Developer Tools": "Afficher/cacher les outils de développement",
-  "Transaction ID": null,
+  "Transaction ID": "ID de transaction",
   "Transaction details": "Détails de la transaction",
   "Transaction received": "Transaction reçue",
   "Transaction sent": "Transaction envoyée",
   "Transactions": "Transactions",
-  "Transactions Details": null,
-  "Transactions chart": null,
+  "Transactions Details": "Détails des transactions",
+  "Transactions chart": "Graphique des transactions",
   "Trust": "Trust",
   "Trust Weight": "Trust Weight",
   "Trust transaction": "Transaction de Trust",
@@ -459,17 +459,17 @@
   "View private key for address": "Afficher la clé privée pour l'adresse",
   "Visit repository": "Visiter le répertoire cible",
   "Volume": "Volume",
-  "Waiting for 100% synchronization to start staking...": null,
-  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
+  "Waiting for 100% synchronization to start staking...": "En attente de la synchronisation à 100% pour commencer le processus de staking...",
+  "Waiting for average age of balance to exceed 72 hours to start staking...": "En attente que l'âge moyen du solde dépasse 72 heures pour commencer le processus de staking...",
   "Wallet backed up": "Portefeuille sauvegardé",
   "Wallet has been backed up": "Le portefeuille a été sauvegardé",
   "Wallet has been encrypted.": "Le portefeuille a été chiffré.",
   "Wallet is not encrypted": "Le portefeuille n'est pas chiffré",
   "Wallet is not staking": "Le portefeuille n'est pas en train de Stake",
   "Wallet is staking": "Le portefeuille est en train de Stake",
-  "Wallet password": null,
+  "Wallet password": "Mot de passe du portefeuille",
   "Wallet will be automatically refreshed for the change to take effect": "Le portefeuille sera automatiquement actualisé pour que le changement prenne effet",
-  "Warning": null,
+  "Warning": "Avertissement",
   "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": null,
   "Yes": "Oui",
   "Yes, abort": "Oui, abandonner",
@@ -481,5 +481,5 @@
   "Your wallet is not encrypted!": "Votre portefeuille n'est pas chiffré!",
   "Your wallet password": "Mot de passe de votre portefeuille",
   "or drag and drop it here": "ou faites un glisser-déposer ici",
-  "rows": null
+  "rows": "rangées"
 }
