--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -288,7 +288,7 @@
   "No, let it continue": "Nie, kontynuuj",
   "No, let it sync": "Nie, synchronizuj",
   "Not available": "Niedostępne",
-  "Not enough disk space! Minimum 15GB of free space is required.": "Brak wystarczającej powierzchni dysku. Wymagane minimum to 15GB.",
+  "Not enough disk space! Minimum 15GB of free space is required.": null,
   "Not logged in": "Nie jesteś zalogowany",
   "Not provided": "Nie podano",
   "Notes": "Notatki",
