--- a/assets/translations/zh-cn.json
+++ b/assets/translations/zh-cn.json
@@ -35,7 +35,7 @@
   "Auto Update is not yet available on Mac, please update the wallet manually for the time being": "Mac上尚未提供自动更新，请暂时手动更新钱包。",
   "Auto update (Recommended)": "自动更新 (推荐)",
   "Automatically check for new versions and notify if a new version is available.": "自动检查新版本并通知新版本是否可用。",
-  "Avatar Mode": null,
+  "Avatar Mode": "头像模式",
   "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
   "Background": "背景，后台。",
   "Background Color": "背景色",
@@ -48,7 +48,7 @@
   "Base currency": null,
   "Block Count": "块计数",
   "Block Weight": "块重量",
-  "Block hash": null,
+  "Block hash": "块哈希",
   "Bootstrap Recent Database": "启动最近数据库",
   "Bootstrap process has been aborted": "启动程序已被中止",
   "Browse": "浏览",
@@ -59,7 +59,7 @@
   "Cannot find module": "找不到模块",
   "Cannot install from that location": "无法从那个位置安装",
   "Cannot move to the same account": "无法移动到同一帐户",
-  "Category": null,
+  "Category": "分类",
   "Change password": "更改密码",
   "Check for Updates...": "检查更新...",
   "Check wallet": "检查钱包",
@@ -80,7 +80,7 @@
   "Closing Nexus Wallet": "关闭Nexus钱包",
   "Color scheme": "配色方案",
   "Color scheme has been reset to default": "颜色方案已被重置为默认",
-  "Confirm": null,
+  "Confirm": "确认",
   "Confirm password": "确认密码",
   "Confirmations": "确认",
   "Connecting to Nexus Core": "连接到Nexus核心",
@@ -95,7 +95,7 @@
   "Copy to clipboard": "复制到剪贴板",
   "Core": "核心",
   "Core is in Manual Mode": "核心处于手动模式",
-  "Core needs to restart for these settings to take effect!": null,
+  "Core needs to restart for these settings to take effect!": "需要重启这些设置才能生效！",
   "Core output": "核心输出",
   "Core restarting": "核心重启",
   "Core settings saved": "保存核心设置",
@@ -125,13 +125,13 @@
   "Developer mode": "开发人员模式",
   "Development mode enables advanced features to aid in development. After enabling the wallet must be closed and reopened to enable those features.": "开发模式使高级功能有助于开发。启用钱包后，必须关闭并重新打开以启用这些功能。",
   "Disable %{moduleName}?": "禁用 %{moduleName}?",
-  "Disabling Avatar will make the core use a separate change key": null,
+  "Disabling Avatar will make the core use a separate change key": "禁用头像将使核心使用一个单独的更换密钥",
   "Dismiss": "解除，取消。",
   "Display Test Transactions on the Transactions page": "在“交易”页面上显示“测试交易”",
   "Display name": "显示昵称",
   "Download Recent Database": "下载最近的数据库",
   "Download recent database?": "下载最近的数据库？",
-  "Download transactions history": null,
+  "Download transactions history": "下载交易记录",
   "Downloading": "正在下载",
   "Downloading a recent version of the database might reduce the time it takes to synchronize your wallet": "下载数据库最新版本可能会减少同步你的钱包所需的时间",
   "Downloading the database": "正在下载数据库",
@@ -153,7 +153,7 @@
   "Enter console commands here (ex: getinfo, help)": "在此输入控制台命令 (前称：getinfo，帮助)",
   "Enter manual Core mode?": "输入手动核心模式？",
   "Enter your message": "输入您的讯息",
-  "Enter your wallet password": null,
+  "Enter your wallet password": "输入您的钱包密码",
   "Error bootstrapping recent database": "启动最近的数据库时出错",
   "Error changing password": "更改密码出错",
   "Error copying module files": "复制模块文件时出错",
@@ -185,14 +185,14 @@
   "Hash Difficulty": "哈希难度",
   "Help": "帮助",
   "High": "高",
-  "I understand the risk": null,
+  "I understand the risk": "我了解风险",
   "IMPROPER USE OF THIS SOFTWARE COULD LEAD TO PERMANENT LOSS OF COIN.": "不正确使用本软件可能导致永久性的货币损失。",
   "IP address": "IP 地址",
   "IP address configured for manual Core.": "IP 地址已配置为手动核心。",
-  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": null,
+  "IP/Ports allowed to mine to. Separate by <b>;</b> . Wildcards supported only in IP": "IP/端口允许我自己。由 <b>分隔；</b> 。威尔德卡只在 IP 支持",
   "Ignore": "忽略",
   "Immature": "未成熟",
-  "Immature Balance": null,
+  "Immature Balance": "不饱和余额",
   "Import": "导入",
   "Import custom theme": "导入自定义主题",
   "Import private key": "导入私钥",
@@ -215,8 +215,8 @@
   "Language": "语言",
   "Last updated\n%{time}": "最近一次更新的时间 %{time}",
   "Light": "浅",
-  "Loading transaction details...": null,
-  "Loading transactions": null,
+  "Loading transaction details...": "正在加载交易详情...",
+  "Loading transactions": "正在加载交易",
   "Local Time": "当地时间",
   "Log in now": "立即登录",
   "Log out": "退出",
@@ -241,7 +241,7 @@
   "Minimize the wallet when closing the window instead of closing it.": "关闭窗口而不关闭钱包时最小化钱包。",
   "Minimum amount of confirmations before a block is accepted. Local only.": "在块接受前确认的最小数量。仅本地。",
   "Minimum confirmations": "最小确认",
-  "Mining IP Whitelist": null,
+  "Mining IP Whitelist": "采矿 IP 白名单",
   "Module Details": "模块详细信息",
   "Module Specifications version": "模块规格版本",
   "Module has been successfully installed": "模块已成功安装",
@@ -288,7 +288,7 @@
   "No, let it continue": "不，让我们继续",
   "No, let it sync": "不，让我们同步",
   "Not available": "不可用",
-  "Not enough disk space! Minimum 15GB of free space is required.": "磁盘空间不足！需要最低15GB可用空间。",
+  "Not enough disk space! Minimum 15GB of free space is required.": null,
   "Not logged in": "未登录",
   "Not provided": "未提供",
   "Notes": "注",
@@ -311,7 +311,7 @@
   "Past Week": "上周",
   "Past Year": "去年",
   "Paste": "粘贴",
-  "Pending": null,
+  "Pending": "待处理",
   "Phone Number": "电话号码",
   "Phone number": "电话号码",
   "Please wait for Nexus Core to start.": "请等待 Nexus 核心开始。",
@@ -356,7 +356,7 @@
   "Restarting Core...": "重新启动核心...",
   "Restarting Nexus Core...": "重新启动 Nexus 核心...",
   "Sample Address": "示例地址",
-  "Save Settings": null,
+  "Save Settings": "保存设置",
   "Save changes": "保存修改",
   "Search address": "搜索地址",
   "Search contact": "搜索联系人",
@@ -374,24 +374,24 @@
   "Send": "发送",
   "Send NXS": "发送NXS",
   "Send To multiple recipients": "发送给多个收件人",
-  "Send all": null,
+  "Send all": "发送全部",
   "Send anonymous usage data": "发送匿名使用数据",
   "Send anonymous usage data to allow the Nexus developers to improve the wallet.": "发送匿名使用数据，以便 Nexus 开发者改善钱包。",
   "Send from": "发送自",
   "Send to": "发送到",
   "Send transaction?": "发送交易？",
   "Sent": "发送",
-  "Set timeout for login": null,
+  "Set timeout for login": "设置登录超时",
   "Settings": "设置",
-  "Settings Saving": null,
-  "Settings Unchanged": null,
-  "Show transactions chart": null,
+  "Settings Saving": "设置保存",
+  "Settings Unchanged": "设置未替换",
+  "Show transactions chart": "显示交易表",
   "Source code": "源代码",
   "Stake": "堆栈",
   "Stake Difficulty": "堆栈难度",
   "Stake Rate": "稳定率",
   "Stake Weight": "堆积重量",
-  "Staking and mining rewards that need to get past 120 block-old to become available": null,
+  "Staking and mining rewards that need to get past 120 block-old to become available": "需要获得120块块的堆积奖励，才能获得",
   "Start Nexus Core": "开始 Nexus 核心",
   "Stop Nexus Core": "停止 Nexus 核心",
   "Stopping Core...": "停止核心...",
@@ -418,7 +418,7 @@
   "This repository does not exist or is private": "此存储库不存在或是私有的",
   "This repository is not verified to be the real source code of this module": "此存储库未经验证是此模块的真正源代码",
   "This setting change will only take effect after Core is restarted. Do you want to restart the Core now?": "此设置更改只能在重新启动核心后生效。您想现在重新启动核心吗？",
-  "Time": null,
+  "Time": "时间",
   "Time is required": "时间是必需的",
   "Time must be at least one hour in the future": "时间必须在今后至少一个小时",
   "Time span": "时间间隔",
@@ -427,13 +427,13 @@
   "Toggle Developer Tools": "切换开发者工具",
   "Toggle FullScreen": "切换全屏",
   "Toggle Module's Developer Tools": "切换模块开发者工具",
-  "Transaction ID": null,
+  "Transaction ID": "交易 ID",
   "Transaction details": "交易详情",
   "Transaction received": "已收到交易",
   "Transaction sent": "交易已发送",
   "Transactions": "交易记录（Transaction）",
-  "Transactions Details": null,
-  "Transactions chart": null,
+  "Transactions Details": "交易详情",
+  "Transactions chart": "交易表",
   "Trust": "信任",
   "Trust Weight": "信任权重",
   "Trust transaction": "信托交易",
@@ -459,17 +459,17 @@
   "View private key for address": "查看私钥地址",
   "Visit repository": "访问仓库",
   "Volume": "音量",
-  "Waiting for 100% synchronization to start staking...": null,
-  "Waiting for average age of balance to exceed 72 hours to start staking...": null,
+  "Waiting for 100% synchronization to start staking...": "等待 100% 同步开始打造...",
+  "Waiting for average age of balance to exceed 72 hours to start staking...": "等待平均余额年龄超过72小时开始打进游戏...",
   "Wallet backed up": "钱包备份",
   "Wallet has been backed up": "钱包已备份",
   "Wallet has been encrypted.": "钱包已加密。",
   "Wallet is not encrypted": "钱包未加密",
   "Wallet is not staking": "钱包不是挂起",
   "Wallet is staking": "钱包正在挂起",
-  "Wallet password": null,
+  "Wallet password": "钱包密码",
   "Wallet will be automatically refreshed for the change to take effect": "钱包将自动刷新，以便更改生效",
-  "Warning": null,
+  "Warning": "警告",
   "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": null,
   "Yes": "是",
   "Yes, abort": "是，中止",
