--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -288,7 +288,7 @@
   "No, let it continue": "لا، دعها تستمر",
   "No, let it sync": "لا، دعها تزامن",
   "Not available": "غير متاح",
-  "Not enough disk space! Minimum 15GB of free space is required.": null,
+  "Not enough disk space! Minimum 15GB of free space is required.": "مساحة غير كافيه في القرص! الحد الأدنى للمساحة الخالية 15GB.",
   "Not logged in": "لم يتم دخولك",
   "Not provided": "غير مزود",
   "Notes": "ملاحظات",
