--- a/assets/translations/fi.json
+++ b/assets/translations/fi.json
@@ -288,7 +288,7 @@
   "No, let it continue": "Ei, anna sen jatkaa",
   "No, let it sync": "Ei, anna sen synkronoida",
   "Not available": "Ei saatavilla",
-  "Not enough disk space! Minimum 15GB of free space is required.": null,
+  "Not enough disk space! Minimum 15GB of free space is required.": "Ei tarpeeksi tilaa levyllä! Vähintään 15GB tilaa vaaditaan.",
   "Not logged in": "Et ole kirjautunut",
   "Not provided": "Ei tarjolla",
   "Notes": "Merkinnät",
