--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -288,7 +288,7 @@
   "No, let it continue": "Non, le laisser continuer",
   "No, let it sync": "Non, le laisser synchroniser",
   "Not available": "Indisponible",
-  "Not enough disk space! Minimum 15GB of free space is required.": null,
+  "Not enough disk space! Minimum 15GB of free space is required.": "Il n'y a pas assez d'espace disque ! Un minimum de 15Go d'espace libre est nécessaire.",
   "Not logged in": "Portefeuille verrouillé",
   "Not provided": "Non spécifié",
   "Notes": "Remarques",
