Updated language files.
Former-commit-id: d7f31e53bc36455d2cf7aaccbba30f35506d740f

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -360,6 +360,7 @@
   "Save changes": "حفظ التغييرات",
   "Search address": "بحث عنوان",
   "Search contact": "بحث اتصال",
+  "Search for Address": null,
   "Security": "أمن",
   "Select Wallet Theme": "حدد موضوع المحفظة",
   "Select a custom wallpaper": "حدد خلفية مخصصة",
