--- a/assets/translations/de.json
+++ b/assets/translations/de.json
@@ -360,6 +360,7 @@
   "Save changes": null,
   "Search address": null,
   "Search contact": "Kontakt suchen",
+  "Search for Address": null,
   "Security": "Sicherheit",
   "Select Wallet Theme": null,
   "Select a custom wallpaper": "Benutzerdefiniertes Hintergrundbild auswählen",
