--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -360,6 +360,7 @@
   "Save changes": "Guardar cambios",
   "Search address": null,
   "Search contact": "Buscar contacto",
+  "Search for Address": null,
   "Security": null,
   "Select Wallet Theme": null,
   "Select a custom wallpaper": "Seleccione un fondo de pantalla personalizado",
