--- a/assets/translations/fi.json
+++ b/assets/translations/fi.json
@@ -360,6 +360,7 @@
   "Save changes": "Tallenna muutokset",
   "Search address": "Etsi osoite",
   "Search contact": "Etsi yhteystieto",
+  "Search for Address": null,
   "Security": "Turvallisuus",
   "Select Wallet Theme": "Valitse Lompakon Teema",
   "Select a custom wallpaper": "Valitse mukautettu taustakuva",
