--- a/assets/translations/fr.json
+++ b/assets/translations/fr.json
@@ -360,6 +360,7 @@
   "Save changes": "Sauvegarder changements",
   "Search address": "Rechercher une adresse",
   "Search contact": "Chercher un contact",
+  "Search for Address": null,
   "Security": "Sécurité",
   "Select Wallet Theme": "Sélectionner le thème du portefeuille",
   "Select a custom wallpaper": "Sélectionner un fond d'écran personnalisé",
