--- a/assets/translations/hu.json
+++ b/assets/translations/hu.json
@@ -360,6 +360,7 @@
   "Save changes": "Változások mentése",
   "Search address": "Cím keresése",
   "Search contact": "Névjegy keresése",
+  "Search for Address": null,
   "Security": "Biztonság",
   "Select Wallet Theme": "Pénztárca Kinézetének Választása",
   "Select a custom wallpaper": "Egyedi Háttérkép Választása",
