--- a/assets/translations/ja.json
+++ b/assets/translations/ja.json
@@ -360,6 +360,7 @@
   "Save changes": null,
   "Search address": null,
   "Search contact": "検索連絡先",
+  "Search for Address": null,
   "Security": "セキュリティ",
   "Select Wallet Theme": null,
   "Select a custom wallpaper": null,
