--- a/assets/translations/ko.json
+++ b/assets/translations/ko.json
@@ -360,6 +360,7 @@
   "Save changes": null,
   "Search address": null,
   "Search contact": "연락처 검색",
+  "Search for Address": null,
   "Security": "보안",
   "Select Wallet Theme": null,
   "Select a custom wallpaper": null,
