--- a/assets/translations/pl.json
+++ b/assets/translations/pl.json
@@ -360,6 +360,7 @@
   "Save changes": "Zapisz zmiany",
   "Search address": "Szukaj adresu",
   "Search contact": "Szukaj Kontaktu",
+  "Search for Address": null,
   "Security": "Zabezpieczenia",
   "Select Wallet Theme": "Wybierz skórkę portfela",
   "Select a custom wallpaper": "Wybierz tapetę niestandardową",
