--- a/assets/translations/pt.json
+++ b/assets/translations/pt.json
@@ -360,6 +360,7 @@
   "Save changes": "Salvar alterações",
   "Search address": null,
   "Search contact": "Pesquisar contato",
+  "Search for Address": null,
   "Security": "Segurança",
   "Select Wallet Theme": null,
   "Select a custom wallpaper": "Selecione um papel de parede personalizado",
