--- a/assets/translations/ru.json
+++ b/assets/translations/ru.json
@@ -360,6 +360,7 @@
   "Save changes": null,
   "Search address": null,
   "Search contact": "Поиск контактов",
+  "Search for Address": null,
   "Security": "Безопасность",
   "Select Wallet Theme": null,
   "Select a custom wallpaper": null,
