--- a/assets/translations/zh-cn.json
+++ b/assets/translations/zh-cn.json
@@ -360,6 +360,7 @@
   "Save changes": "保存修改",
   "Search address": "搜索地址",
   "Search contact": "搜索联系人",
+  "Search for Address": null,
   "Security": "安全设置",
   "Select Wallet Theme": "选择钱包主题",
   "Select a custom wallpaper": "选择自定义壁纸",
