--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -360,6 +360,7 @@
   "Save changes": "Save changes",
   "Search address": "Search address",
   "Search contact": "Search contact",
+  "Search for Address": "Search for Address",
   "Security": "Security",
   "Select Wallet Theme": "Select Wallet Theme",
   "Select a custom wallpaper": "Select a custom wallpaper",
