--- a/assets/translations/nl.json
+++ b/assets/translations/nl.json
@@ -360,6 +360,7 @@
   "Save changes": null,
   "Search address": null,
   "Search contact": "Zoek Contactgegevens",
+  "Search for Address": null,
   "Security": "Beveiliging",
   "Select Wallet Theme": null,
   "Select a custom wallpaper": null,
