New 3.0.5 core. Updated Translations
Former-commit-id: 672fd8b9f42f0045e52ac3cc7847cce8918306f5

--- a/assets/translations/ar.json
+++ b/assets/translations/ar.json
@@ -194,7 +194,7 @@
   "Immature": "غير ناضج",
   "Immature Balance": "رصيد غير ناضج",
   "Import": "استيراد",
-  "Import custom theme": "تصدير موضوع مخصص",
+  "Import custom theme": "استيراد موضوع مخصص",
   "Import private key": "استيراد مفتاح خاص",
   "Install Module": "تثبيت الوحدة",
   "Install it later": "قم بتثبيت في وقت لاحق",
