--- a/assets/translations/es.json
+++ b/assets/translations/es.json
@@ -288,7 +288,7 @@
   "No, let it continue": null,
   "No, let it sync": null,
   "Not available": null,
-  "Not enough disk space! Minimum 15GB of free space is required.": null,
+  "Not enough disk space! Minimum 15GB of free space is required.": "¡No hay suficiente espacio en disco! Se requiere un mínimo de 15GB de espacio libre.",
   "Not logged in": "No se ha iniciado sesión",
   "Not provided": null,
   "Notes": "Notas",
