--- a/assets/translations/fi.json
+++ b/assets/translations/fi.json
@@ -36,7 +36,7 @@
   "Auto update (Recommended)": "Automaattinen päivitys (Suositeltu)",
   "Automatically check for new versions and notify if a new version is available.": "Automaattisesti tarkistaa onko uusia versioita saatavilla ja ilmoittaa kun on.",
   "Avatar Mode": "Avatar Tila",
-  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": null,
+  "BACKUP YOUR WALLET OFTEN AND KEEP YOUR PASSWORDS SAFE.": "VARMUUSKOPIOI LOMPAKKOSI USEASTI JA PIDÄ SALASANA TALLESSA.",
   "Background": "Taustakuva",
   "Background Color": "Taustaväri",
   "Backing up your wallet...": "Varmuuskopioidaan lompakkoa...",
@@ -45,7 +45,7 @@
   "Backup directory": "Varmuuskopiointikansio",
   "Backup wallet": "Varmuuskopioi lompakko",
   "Balance": "Saldo",
-  "Base currency": null,
+  "Base currency": "Pohjavaluutta",
   "Block Count": "Lohko lukumäärä",
   "Block Weight": "Lohko Paino",
   "Block hash": "Lohkon Hajautus",
@@ -73,9 +73,9 @@
   "Clear console": "Tyhjennä konsoli",
   "Click to copy to clipboard": "Kopioi leikepöydälle",
   "Close": "Sulje",
-  "Close and go to Github": null,
+  "Close and go to Github": "Sulje ja siirry Githubiin",
   "Close and install": "Sulje ja asenna",
-  "Close the wallet and go to GitHub?": null,
+  "Close the wallet and go to GitHub?": "Sulje lompakko ja siirry Githubiin?",
   "Close the wallet and install update now?": "Haluatko sulkea lompakon ja asentaa nyt?",
   "Closing Nexus Wallet": "Suljetaan Nexus Lompakko",
   "Color scheme": "Väriteema",
@@ -206,7 +206,7 @@
   "Invalid email": "Sähköpostiosoite on virheellinen",
   "Invalid file format! Custom theme file must be in JSON": "Väärä tiedostotyyppi! Mukautetun teema tiedoston tulee olla JSON",
   "It is highly recommended that you should encrypt your wallet to keep your NXS safe.": "On erittäin suositeltavaa, että salaat lompakkosi pitääksesi NXSsi turvassa.",
-  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": null,
+  "It would be much easier for a closed source module to hide\n              malicious code than for an open source one. Therefore, in case you\n              still want to disable this setting, it is highly recommended that\n              you only install and run closed source modules that you are\n              developing yourself.": "Suljetun lähdekoodin moduulin on paljon helpompi piilotella\n              haitallista koodia kuin avoimen lähdekoodin. Joten, jos vielä\n              haluat ottaa tämän asetuksen pois päältä, on suositeltavaa, että\n              asennat ja ajat vain suljetun lähdekoodin moduuleja, joita\n              kehität itse.",
   "Keep auto update On": "Pidä automaattiset päivitykset Päällä",
   "Keep policy on": "Pidä käytäntö päällä",
   "Keeping your wallet up-to-date is important for your security and will ensure that you get the best possible user experience.": "Lompakon ajantasalla pitäminen on tärkeää turvallisuutesi vuoksi ja varmistaa parhaan mahdollisen käyttäjäkokemuksen.",
@@ -260,7 +260,7 @@
   "My Addresses": "Omat osoitteeni",
   "My Nexus address": "Minun Nexus osoite",
   "My Nexus address for %{name}": "Nexus osoitteeni nimelle %{name}",
-  "My address for %{name}": null,
+  "My address for %{name}": "Osoitteeni %{name}",
   "NXS Amount": "NXS määrä",
   "NXS addresses": "NXS osoitteet",
   "NXS moved successfully": "NXS siirretty onnistuneesti",
@@ -338,8 +338,8 @@
   "Recipient address": "Vastaanottajan osoite",
   "Refresh": "Päivitä",
   "Refreshing market data...": "Päivitetään markkinoiden tietoja...",
-  "Reload": null,
-  "Reload transaction history": null,
+  "Reload": "Lataa uudelleen",
+  "Reload transaction history": "Lataa rahansiirtohistoria uudestaan",
   "Remove address": "Poista osoite",
   "Remove recipient": "Poista vastaanottaja",
   "Render globe": "Renderöi maapallo",
@@ -352,7 +352,7 @@
   "Reset": "Nollaa",
   "Restart Core": "Uudelleenkäynnistä Ydin",
   "Restart Core?": "Uudelleenkäynnistä Ydin?",
-  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": null,
+  "Restart Nexus core with -walletclean parameter to clean out and reload all transaction history": "Uudelleenkäynnistä Nexus ydin -walletclean parametrillä puhdistaakesi ja ladataksesi siirtohistorian",
   "Restarting Core...": "Uudelleenkäynnistetään Ydintä...",
   "Restarting Nexus Core...": "Uudelleenkäynnistetään Nexus Ydintä...",
   "Sample Address": "Malli Osoite",
@@ -360,7 +360,7 @@
   "Save changes": "Tallenna muutokset",
   "Search address": "Etsi osoite",
   "Search contact": "Etsi yhteystieto",
-  "Search for Address": null,
+  "Search for Address": "Etsi osoitetta",
   "Security": "Turvallisuus",
   "Select Wallet Theme": "Valitse Lompakon Teema",
   "Select a custom wallpaper": "Valitse mukautettu taustakuva",
@@ -413,7 +413,7 @@
   "This is an address registered to this wallet.": "Tämä osoite on rekisteröity lompakkoon.",
   "This is not one of your addresses.": "Tämä ei ole yksi osoitteistasi.",
   "This is one of your addresses.": "Tämä on yksi osoitteistasi.",
-  "This is only for module developers and can be dangerous for\n              regular users. Please make sure you know what you are doing!": null,
+  "This is only for module developers and can be dangerous for\n              regular users. Please make sure you know what you are doing!": "Tämä on vain moduulien kehittäjille ja saattaa olla vaarallinen\n              tavallisille käyttäjille. Varmistathan, että tiedät mitä teet!",
   "This is your Default Address": "Tämä on oletusosoitteesi",
   "This module is developed by Nexus": "Tämän moduulin on kehittänyt Nexus",
   "This repository does not exist or is private": "Tätä tietolähdettä ei ole tai se on yksityinen",
@@ -444,7 +444,7 @@
   "Turn policy off": "Käytäntö pois",
   "Twinkling stars": "Tuikkivat tähdet",
   "Unknown": "Tuntematon",
-  "Unknown error": null,
+  "Unknown error": "Tuntematon virhe",
   "Unknown login status": "Tuntematon kirjautuminen",
   "Unsupported file type": "Tiedostotyyppiä ei tueta",
   "Update available! Downloading...": "Päivitys saatavilla! Ladataan...",
@@ -471,7 +471,7 @@
   "Wallet password": "Lompakon salasana",
   "Wallet will be automatically refreshed for the change to take effect": "Lompakko automaattisesti päivitetään, jotta muutos tulee voimaan",
   "Warning": "Varoitus",
-  "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": null,
+  "Warning: This module is written by a third party, Nexus is NOT\n              responsible for its quality or legitimacy. Please make sure to do\n              your due diligence before installing third party modules and use\n              them with your own risk.": "Varoitus: Tämän moduulin on kirjoittanut kolmas osapuoli. Nexus EI OLE\n             vastuullinen sen laadusta tai rehellisyydestä. Olethan valpas\n              ennen kuin asennat kolmannen osapuolen kehittämiä moduuleja\n              ja käytä niitä omalla riskilläsi.",
   "Yes": "Kyllä",
   "Yes, abort": "Kyllä, lopeta",
   "Yes, let's bootstrap it": "Kyllä, esiladataan se",
