Updated core and added multiple functions
-Updated core to 3.0.6 [RC2]
-Added ability clear stored peer connections (wipe addr folder) from
Settings>Core menu in interface.
-Added ability to open core data directory and interface data directory
from the Help drop down menu.


Former-commit-id: 2921792323f3eb4ba705ec6cf2506562ce0b351c

--- a/assets/translations/en.json
+++ b/assets/translations/en.json
@@ -70,6 +70,9 @@
   "Checking module": "Checking module",
   "Checking sync status": "Checking sync status",
   "Choose your Nexus Address display preference": "Choose your Nexus Address display preference",
+  "Clear": "Clear",
+  "Clear peer connections": "Clear peer connections",
+  "Clear all stored peer connections and restart Nexus": "Clear all stored peer connections and restart Nexus",
   "Clear console": "Clear console",
   "Click to copy to clipboard": "Click to copy to clipboard",
   "Close": "Close",
